Fix: Tái cấu trúc backend thành Modular Monolitic